[metadata]
name=whatup-api
version=0.1
author=Team WhatUp
author-email=projectwhatup@gmail.com
summary=Project WhatUp Core API
description-file=README.md
home-page=http://projectwhatup.us
project-url: Repository, http://github.com/JohnBrodie/whatup_api
classifier=Development Status :: 3 - Alpha

[files]
packages=whatup-api
extra_files=setup.py README.md

[nosetests]
rednose=auto
match=^[Tt]est|^[Ss]hould
where=whatup_api/tests
